--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ __pycache__/
 # Distribution / packaging
 .Python
 env/
-build/
+#build/
 develop-eggs/
 dist/
 downloads/
@@ -99,3 +99,7 @@ ENV/
 
 # mypy
 .mypy_cache/
+.idea/
+node_modules/
+package-lock.json
+#tmp/
