--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "compile-riot": "node_modules/riot/node_modules/.bin/riot  --ext tag.html tags tmp -w",
     "babel-riot": "node_modules/babel-cli/bin/babel.js tmp --out-dir build --watch",
-    "dev": "concurrently --kill-others \"npm run compile-riot\" \"npm run babel-riot\""
+    "babel-es6": "node_modules/babel-cli/bin/babel.js tags --out-dir build --watch",
+    "dev": "concurrently --kill-others \"npm run compile-riot\" \"npm run babel-riot\" \"npm run babel-es6\""
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015-riot": "^1.1.0",
     "concurrently": "^3.5.0",
-    "riot": "^3.7.0"
+    "riot": "^3.7.0",
+    "riotcontrol": "0.0.3"
   }
 }
