--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ chardet==3.0.4
 idna==2.6
 requests==2.18.4
 selenium==3.6.0
-simpleARS==0.9.2
 urllib3==1.22
+-e git+https://github.com/m19t12/simpleARS.git#egg=simpleARS
